feat:improve html metadata

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh" translate="no">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/antd.svg"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="keywords" content="AntdVisual, Ant Design, antd, 可视化工具"/>
+    <meta name="description"
+          content="antd-visual 是一个轻量化的可视化工具，适用于调试和预览 Ant Design 组件，帮助加深对组件的理解与实践。"/>
+    <meta name="author" content="林桂 Gavin"/>
+    <Meta name="Copyright" Content="本页版权归林桂个人所有">
     <title>AntdVisual</title>
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/antd.svg"/>
 </head>
 <body>
 <div id="root"></div>
