feat:improve html metadata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh" translate="no">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="keywords" content="AntdVisual, Ant Design, antd, 可视化工具"/>
     <meta name="description"
           content="antd-visual 是一个轻量化的可视化工具，适用于调试和预览 Ant Design 组件，帮助加深对组件的理解与实践。"/>
