feat:set new favicon path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="林桂 Gavin"/>
     <Meta name="Copyright" Content="本页版权归林桂个人所有">
     <title>AntdVisual</title>
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/antd.svg"/>
+    <link rel="icon" href="/favicon.ico" />
 </head>
 <body>
 <div id="root"></div>
